# ai-continuity-cicd-demo

./: .env.example  .gitignore  Jenkinsfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: continuity_policy.json
docs/: architecture.md  article-snippet.md  ollama.md
reports/examples/ai-disabled/: audit-report.json  audit-report.md
reports/examples/ai-invalid/: audit-report.json  audit-report.md
reports/examples/ai-ok/: audit-report.json  audit-report.md
reports/examples/ai-timeout/: audit-report.json  audit-report.md
reports/examples/high-risk/: audit-report.json  audit-report.md
reports/examples/ollama-unavailable/: audit-report.json  audit-report.md
scripts/: ai_review.py  deployment_gate.py  fallback_review.py  reporting.py  run_ci_demo.py
src/demo_app/: __init__.py  calculator.py
tests/: test_ai_review.py  test_calculator.py
