[project]
name = "ai-continuity-cicd-demo"
version = "0.1.0"
description = "Conceptual CI/CD demo showing AI fallback, traceability and manual review when AI is unavailable."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Miguel Mercadillo" }
]

[tool.setuptools]
py-modules = []
